--- a/src/components/animated-icon.module.css
+++ b/src/components/animated-icon.module.css
@@ -1,7 +1,6 @@
 .expoLogoBackground {
   background-image: linear-gradient(180deg, #3c9ffe, #0274df);
-  border-radius: 4vh;
-  width: 15vh;
-  height: 15vh;
-  justify-content: center;
+  border-radius: 40px;
+  width: 128px;
+  height: 128px;
 }
